--- a/Airflow/Starter/airflow/airflow.cfg
+++ b/Airflow/Starter/airflow/airflow.cfg
@@ -1,5 +1,5 @@
 [core]
-af_base_folder: /home/ccsteam
+af_base_folder: /home/afuser
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
 dags_folder = %(af_base_folder)s/airflow/dags
@@ -73,7 +73,7 @@ executor = CeleryExecutor
 # SqlAlchemy supports many different database engine, more information
 # their website
 # sql_alchemy_conn = sqlite:////home/ccsteam/airflow/airflow.db
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@10.192.41.168:5433/airflow1
+sql_alchemy_conn = postgresql+psycopg2://pgdb_user:pgbd_password@POSTGRES_HOST_IP:5432/airflow1
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
@@ -516,7 +516,7 @@ worker_log_server_port = 8793
 # information.
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#broker-settings
 # broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
-broker_url = pyamqp://genuser:genuser@10.192.41.168:5673/mlpipe
+broker_url = pyamqp://someuser:userpassword@RABBITMQ_HOST_IP:5672/mlpipe
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
@@ -525,7 +525,7 @@ broker_url = pyamqp://genuser:genuser@10.192.41.168:5673/mlpipe
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
 # result_backend = db+mysql://airflow:airflow@localhost:3306/airflow
-result_backend = db+postgresql+psycopg2://airflow:airflow@10.192.41.168:5433/airflow1
+result_backend = db+postgresql+psycopg2://pgdb_user:pgbd_password@POSTGRES_HOST_IP:5433/airflow1
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it ``airflow flower``. This defines the IP that Celery Flower runs on
