--- a/Airflow/Starter/airflow/airflow.cfg
+++ b/Airflow/Starter/airflow/airflow.cfg
@@ -516,7 +516,7 @@ worker_log_server_port = 8793
 # information.
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#broker-settings
 # broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
-broker_url = pyamqp://someuser:userpassword@RABBITMQ_HOST_IP:5672/mlpipe
+broker_url = pyamqp://someuser:userpassword@RABBITMQ_HOST_IP:5672/test1
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
